# sendspin-gui

./: README.md  pyproject.toml
src/sendspin_gui/: app.py
src/sendspin_gui/components/: event_log.py  server_panel.py  stream_panel.py
src/sendspin_gui/utils/: __init__.py
