[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sendspin-gui"
version = "0.1.0"
description = "A GUI wrapper for testing and iterating on the aiosendspin server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Developer" }
]
keywords = ["sendspin", "audio", "streaming", "gui", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "aiosendspin",  # No version pin - allows local editable installs
    "customtkinter>=5.2.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
sendspin-gui = "sendspin_gui.__main__:main"

[project.gui-scripts]
sendspin-gui-app = "sendspin_gui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sendspin_gui"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
